[package]
name = "typical90"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "typical90-001"
path = "src/bin/001.rs"

[[bin]]
name = "typical90-002"
path = "src/bin/002.rs"

[[bin]]
name = "typical90-003"
path = "src/bin/003.rs"

[[bin]]
name = "typical90-004"
path = "src/bin/004.rs"

[[bin]]
name = "typical90-005"
path = "src/bin/005.rs"

[[bin]]
name = "typical90-006"
path = "src/bin/006.rs"

[[bin]]
name = "typical90-007"
path = "src/bin/007.rs"

[[bin]]
name = "typical90-008"
path = "src/bin/008.rs"

[[bin]]
name = "typical90-009"
path = "src/bin/009.rs"

[[bin]]
name = "typical90-010"
path = "src/bin/010.rs"

[[bin]]
name = "typical90-011"
path = "src/bin/011.rs"

[[bin]]
name = "typical90-012"
path = "src/bin/012.rs"

[[bin]]
name = "typical90-013"
path = "src/bin/013.rs"

[[bin]]
name = "typical90-014"
path = "src/bin/014.rs"

[[bin]]
name = "typical90-015"
path = "src/bin/015.rs"

[[bin]]
name = "typical90-016"
path = "src/bin/016.rs"

[[bin]]
name = "typical90-017"
path = "src/bin/017.rs"

[[bin]]
name = "typical90-018"
path = "src/bin/018.rs"

[[bin]]
name = "typical90-019"
path = "src/bin/019.rs"

[[bin]]
name = "typical90-020"
path = "src/bin/020.rs"

[[bin]]
name = "typical90-021"
path = "src/bin/021.rs"

[[bin]]
name = "typical90-022"
path = "src/bin/022.rs"

[[bin]]
name = "typical90-023"
path = "src/bin/023.rs"

[[bin]]
name = "typical90-024"
path = "src/bin/024.rs"

[[bin]]
name = "typical90-025"
path = "src/bin/025.rs"

[[bin]]
name = "typical90-026"
path = "src/bin/026.rs"

[[bin]]
name = "typical90-027"
path = "src/bin/027.rs"

[[bin]]
name = "typical90-028"
path = "src/bin/028.rs"

[[bin]]
name = "typical90-029"
path = "src/bin/029.rs"

[[bin]]
name = "typical90-030"
path = "src/bin/030.rs"

[[bin]]
name = "typical90-031"
path = "src/bin/031.rs"

[[bin]]
name = "typical90-032"
path = "src/bin/032.rs"

[[bin]]
name = "typical90-033"
path = "src/bin/033.rs"

[[bin]]
name = "typical90-034"
path = "src/bin/034.rs"

[[bin]]
name = "typical90-035"
path = "src/bin/035.rs"

[[bin]]
name = "typical90-036"
path = "src/bin/036.rs"

[[bin]]
name = "typical90-037"
path = "src/bin/037.rs"

[[bin]]
name = "typical90-038"
path = "src/bin/038.rs"

[[bin]]
name = "typical90-039"
path = "src/bin/039.rs"

[[bin]]
name = "typical90-040"
path = "src/bin/040.rs"

[[bin]]
name = "typical90-041"
path = "src/bin/041.rs"

[[bin]]
name = "typical90-042"
path = "src/bin/042.rs"

[[bin]]
name = "typical90-043"
path = "src/bin/043.rs"

[[bin]]
name = "typical90-044"
path = "src/bin/044.rs"

[[bin]]
name = "typical90-045"
path = "src/bin/045.rs"

[[bin]]
name = "typical90-046"
path = "src/bin/046.rs"

[[bin]]
name = "typical90-047"
path = "src/bin/047.rs"

[[bin]]
name = "typical90-048"
path = "src/bin/048.rs"

[[bin]]
name = "typical90-049"
path = "src/bin/049.rs"

[[bin]]
name = "typical90-050"
path = "src/bin/050.rs"

[[bin]]
name = "typical90-051"
path = "src/bin/051.rs"

[[bin]]
name = "typical90-052"
path = "src/bin/052.rs"

[[bin]]
name = "typical90-053"
path = "src/bin/053.rs"

[[bin]]
name = "typical90-054"
path = "src/bin/054.rs"

[[bin]]
name = "typical90-055"
path = "src/bin/055.rs"

[[bin]]
name = "typical90-056"
path = "src/bin/056.rs"

[[bin]]
name = "typical90-057"
path = "src/bin/057.rs"

[[bin]]
name = "typical90-058"
path = "src/bin/058.rs"

[[bin]]
name = "typical90-059"
path = "src/bin/059.rs"

[[bin]]
name = "typical90-060"
path = "src/bin/060.rs"

[[bin]]
name = "typical90-061"
path = "src/bin/061.rs"

[[bin]]
name = "typical90-062"
path = "src/bin/062.rs"

[[bin]]
name = "typical90-063"
path = "src/bin/063.rs"

[[bin]]
name = "typical90-064"
path = "src/bin/064.rs"

[[bin]]
name = "typical90-065"
path = "src/bin/065.rs"

[[bin]]
name = "typical90-066"
path = "src/bin/066.rs"

[[bin]]
name = "typical90-067"
path = "src/bin/067.rs"

[[bin]]
name = "typical90-068"
path = "src/bin/068.rs"

[[bin]]
name = "typical90-069"
path = "src/bin/069.rs"

[[bin]]
name = "typical90-070"
path = "src/bin/070.rs"

[[bin]]
name = "typical90-071"
path = "src/bin/071.rs"

[[bin]]
name = "typical90-072"
path = "src/bin/072.rs"

[[bin]]
name = "typical90-073"
path = "src/bin/073.rs"

[[bin]]
name = "typical90-074"
path = "src/bin/074.rs"

[[bin]]
name = "typical90-075"
path = "src/bin/075.rs"

[[bin]]
name = "typical90-076"
path = "src/bin/076.rs"

[[bin]]
name = "typical90-077"
path = "src/bin/077.rs"

[[bin]]
name = "typical90-078"
path = "src/bin/078.rs"

[[bin]]
name = "typical90-079"
path = "src/bin/079.rs"

[[bin]]
name = "typical90-080"
path = "src/bin/080.rs"

[[bin]]
name = "typical90-081"
path = "src/bin/081.rs"

[[bin]]
name = "typical90-082"
path = "src/bin/082.rs"

[[bin]]
name = "typical90-083"
path = "src/bin/083.rs"

[[bin]]
name = "typical90-084"
path = "src/bin/084.rs"

[[bin]]
name = "typical90-085"
path = "src/bin/085.rs"

[[bin]]
name = "typical90-086"
path = "src/bin/086.rs"

[[bin]]
name = "typical90-087"
path = "src/bin/087.rs"

[[bin]]
name = "typical90-088"
path = "src/bin/088.rs"

[[bin]]
name = "typical90-089"
path = "src/bin/089.rs"

[[bin]]
name = "typical90-090"
path = "src/bin/090.rs"

[dependencies]
ac-library-rs = "=0.1.1"
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
cps = { path="../../cps" }
[dev-dependencies]
