[package]
name = "abc378"
version = "0.1.0"
edition = "2021"

[dev]
opt-level = 3

[dependencies]
ac-library-rs = "=0.1.1"
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
libm = "=0.2.1"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
proconio = { version = "=0.3.6", features = ["derive"] }
cps = { path="../../cp-libraries" }

[dev-dependencies]

[[bin]]
name = "abc378-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc378-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc378-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc378-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc378-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc378-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc378-g"
path = "src/bin/g.rs"
