[package]
name = "library_checker"
version = "0.1.0"
edition = "2021"

[dev]
opt-level = 3

[dependencies]
ac-library-rs = "=0.1.1"
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
libm = "=0.2.1"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
proconio = { version = "=0.3.6", features = ["derive"] }
cps = { path="../../cps" }

[[bin]]
name = "union-find"
path = "src/graph/unionfind.rs"

[[bin]]
name = "shortest-path"
path = "src/graph/shortest_path.rs"

[[bin]]
name = "factorize"
path = "src/number_theory/factorize.rs"