[package]
name = "aizu_online_judge"
version = "0.1.0"
edition = "2021"

[dependencies]
ac-library-rs = "=0.1.1"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
proconio = { version = "=0.3.6", features = ["derive"] }
cps = { path="../../cps" }

[[bin]]
name = "warshall-floyd"
path = "src/warshall_floyd.rs"

[[bin]]
name = "divisors"
path = "src/divisors.rs"
